--- a/.env.template
+++ b/.env.template
@@ -9,3 +9,4 @@ JWT_SECRET=flux-panel-secret
 DB_DIALECT=sqlite
 DB_SQLITE_PATH=/Volumes/code/codex/network-panel/panel2.db
 JWT_SECRET=flux-panel-secret
+PORT=16365
