--- a/vite-frontend/nginx.conf
+++ b/vite-frontend/nginx.conf
@@ -87,6 +87,9 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
+            # Increase timeouts for long-lived WS connections
+            proxy_read_timeout 300s;
+            proxy_send_timeout 300s;
             
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
