fix:修改从git上拉取变为从vps.town赞助服务器拉取

--- a/.gitignore
+++ b/.gitignore
@@ -263,4 +263,6 @@ publish.sh
 golang-backend/public/
 publish_beta.sh
 .gocache
-./scripts/upload_static_to_server.sh
+scripts/upload_static_to_server.sh
+.release-static
+.release
