--- a/vite-frontend/package.json
+++ b/vite-frontend/package.json
@@ -48,14 +48,15 @@
     "@tailwindcss/vite": "4.1.11",
     "@types/react-beautiful-dnd": "^13.1.8",
     "axios": "^1.11.0",
-    "echarts": "^5.5.0",
     "clsx": "2.1.1",
+    "dayjs": "^1.11.19",
+    "echarts": "^5.5.0",
     "framer-motion": "11.18.2",
     "react": "18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.3.1",
-    "react-is": "^18.3.1",
     "react-hot-toast": "^2.5.2",
+    "react-is": "^18.3.1",
     "react-router-dom": "6.23.0",
     "recharts": "^3.1.1",
     "sonner": "^2.0.6",
