--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -110,25 +110,36 @@ jobs:
             vite:
               - 'vite-frontend/**'
 
-      - name: Set up Node.js
+      - name: Check Docker credentials
         if: steps.vite-changes.outputs.vite == 'true'
+        id: docker-creds
+        run: |
+          if [ -z "${{ secrets.DOCKER_HUB_USERNAME }}" ] || [ -z "${{ secrets.DOCKER_HUB_TOKEN }}" ]; then
+            echo "Docker Hub credentials missing; skipping image build/push."
+            echo "skip=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "skip=false" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Set up Node.js
+        if: steps.vite-changes.outputs.vite == 'true' && steps.docker-creds.outputs.skip != 'true'
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
       - name: Set up Docker Buildx
-        if: steps.vite-changes.outputs.vite == 'true'
+        if: steps.vite-changes.outputs.vite == 'true' && steps.docker-creds.outputs.skip != 'true'
         uses: docker/setup-buildx-action@v2
 
       - name: Log in to DockerHub
-        if: steps.vite-changes.outputs.vite == 'true'
+        if: steps.vite-changes.outputs.vite == 'true' && steps.docker-creds.outputs.skip != 'true'
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
       - name: Build and push Vite multi-arch image
-        if: steps.vite-changes.outputs.vite == 'true'
+        if: steps.vite-changes.outputs.vite == 'true' && steps.docker-creds.outputs.skip != 'true'
         run: |
           docker buildx build \
             --platform linux/amd64 \
