--- a/vite-frontend/package.json
+++ b/vite-frontend/package.json
@@ -61,7 +61,8 @@
     "recharts": "^3.1.1",
     "sonner": "^2.0.6",
     "tailwind-variants": "1.0.0",
-    "tailwindcss": "4.1.11"
+    "tailwindcss": "4.1.11",
+    "xterm": "^5.3.0"
   },
   "devDependencies": {
     "@eslint/compat": "1.2.8",
@@ -70,6 +71,7 @@
     "@types/node": "^24.3.0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "@types/xterm": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "8.31.1",
     "@typescript-eslint/parser": "8.31.1",
     "@vitejs/plugin-react": "4.4.1",
