优化了界面显示效果及组网功能

--- a/easytier/default.conf
+++ b/easytier/default.conf
@@ -3,10 +3,10 @@ instance_name = "network-panel"
 dhcp = false
 ipv4 = "10.126.126.{ipv4}"
 listeners = [
-    "tcp://0.0.0.0:{port}",
+    "tcp://{listen}:{port}",
 ]
 exit_nodes = []
-rpc_portal = "0.0.0.0:0"
+rpc_portal = "127.0.0.1:15888"
 
 [[peer]]
 uri = "tcp://{ip}:{peer_port}"
