--- a/vite-frontend/package.json
+++ b/vite-frontend/package.json
@@ -47,6 +47,7 @@
     "@tailwindcss/postcss": "4.1.11",
     "@tailwindcss/vite": "4.1.11",
     "@types/react-beautiful-dnd": "^13.1.8",
+    "@tanstack/react-virtual": "^3.10.8",
     "axios": "^1.11.0",
     "clsx": "2.1.1",
     "dayjs": "^1.11.19",
@@ -89,6 +90,7 @@
     "prettier": "3.5.3",
     "typescript": "5.6.3",
     "vite": "5.4.11",
+    "vite-plugin-compression": "^0.5.1",
     "vite-tsconfig-paths": "4.3.2"
   }
 }
